--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^6.3.0",
     "notion-client": "^7.1.6",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.3",
     "react-notion-x": "^7.2.6",
