--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
+    "framer-motion": "^12.23.6",
     "gh-pages": "^6.3.0",
     "notion-client": "^7.1.6",
     "react": "^18.2.0",
